--- a/hackintosh/EFI testing/CLOVER/config_1536MB.plist
+++ b/hackintosh/EFI testing/CLOVER/config_1536MB.plist
@@ -173,50 +173,50 @@
 		<key>Properties</key>
 		<dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
-                        <dict>
-                            <key>AAPL,ig-platform-id</key>
-                            <data>BwCbPg==</data>
-                            <key>device-id</key>
-                            <data>kj4AAA==</data>
-                            <key>framebuffer-con0-busid</key>
-                            <data>AgAAAA==</data>
-                            <key>framebuffer-con0-enable</key>
-                            <data>AQAAAA==</data>
-                            <key>framebuffer-con0-flags</key>
-                            <data>xwMAAA==</data>
-                            <key>framebuffer-con0-index</key>
-                            <data>AgAAAA==</data>
-                            <key>framebuffer-con0-pipe</key>
-                            <data>CgAAAA==</data>
-                            <key>framebuffer-con0-type</key>
-                            <data>AAgAAA==</data>
-                            <key>framebuffer-con1-busid</key>
-                            <data>BAAAAA==</data>
-                            <key>framebuffer-con1-enable</key>
-                            <data>AQAAAA==</data>
-                            <key>framebuffer-con1-flags</key>
-                            <data>xwMAAA==</data>
-                            <key>framebuffer-con1-index</key>
-                            <data>AwAAAA==</data>
-                            <key>framebuffer-con1-pipe</key>
-                            <data>CAAAAA==</data>
-                            <key>framebuffer-con1-type</key>
-                            <data>AAgAAA==</data>
-                            <key>framebuffer-con2-busid</key>
-                            <data>AQAAAA==</data>
-                            <key>framebuffer-con2-enable</key>
-                            <data>AQAAAA==</data>
-                            <key>framebuffer-con2-flags</key>
-                            <data>xwMAAA==</data>
-                            <key>framebuffer-con2-index</key>
-                            <data>AQAAAA==</data>
-                            <key>framebuffer-con2-pipe</key>
-                            <data>CQAAAA==</data>
-                            <key>framebuffer-con2-type</key>
-                            <data>AAQAAA==</data>
-                            <key>framebuffer-patch-enable</key>
-                            <data>AQAAAA==</data>
-                        </dict>
+			<dict>
+				<key>framebuffer-con1-pipe</key>
+				<data>CAAAAA==</data>
+				<key>framebuffer-con0-index</key>
+				<data>AgAAAA==</data>
+				<key>framebuffer-con2-flags</key>
+				<data>xwMAAA==</data>
+				<key>framebuffer-con0-busid</key>
+				<data>AgAAAA==</data>
+				<key>framebuffer-con1-type</key>
+				<data>AAgAAA==</data>
+				<key>framebuffer-con0-enable</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con1-enable</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con2-pipe</key>
+				<data>CQAAAA==</data>
+				<key>device-id</key>
+				<data>kj4AAA==</data>
+				<key>framebuffer-con2-index</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con1-flags</key>
+				<data>xwMAAA==</data>
+				<key>framebuffer-con2-busid</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con0-pipe</key>
+				<data>CgAAAA==</data>
+				<key>framebuffer-con2-enable</key>
+				<data>AQAAAA==</data>
+				<key>framebuffer-con2-type</key>
+				<data>AAQAAA==</data>
+				<key>AAPL,ig-platform-id</key>
+				<data>BwCbPg==</data>
+				<key>framebuffer-con0-type</key>
+				<data>AAgAAA==</data>
+				<key>framebuffer-con1-index</key>
+				<data>AwAAAA==</data>
+				<key>framebuffer-con0-flags</key>
+				<data>xwMAAA==</data>
+				<key>framebuffer-con1-busid</key>
+				<data>BAAAAA==</data>
+				<key>framebuffer-patch-enable</key>
+				<data>AQAAAA==</data>
+			</dict>
 		</dict>
 		<key>InjectLAN</key>
 		<false/>
@@ -409,26 +409,22 @@
 		<true/>
 	</dict>
 	<key>RtVariables</key>
-	<key>SMBIOS</key>
-        <dict>
-            <key>BooterConfig</key>
-            <string>0x28</string>
-            <key>CsrActiveConfig</key>
-            <string>0x3E7</string>
-            <key>MLB</key>
-            <string>C02726902CDH69F1M</string>
-            <key>ROM</key>
-            <string>UseMacAddr0</string>
-        </dict>
 	<dict>
-            <key>BoardSerialNumber</key>
-            <string>C02726902CDH69F1M</string>
-            <key>ProductName</key>
-            <string>iMac18,1</string>
-            <key>SerialNumber</key>
-            <string>C02TX0VDH7JY</string>
-            <key>SmUUID</key>
-            <string>91492A73-595C-4D97-A6FC-2B5D3ED1B54D</string>
+		<key>ROM</key>
+		<string>UseMacAddr0</string>
+		<key>BooterConfig</key>
+		<string>0x28</string>
+		<key>CsrActiveConfig</key>
+		<string>0x67</string>
+	</dict>
+	<key>SMBIOS</key>
+	<dict>
+		<key>Trust</key>
+		<true/>
+		<key>NoRomInfo</key>
+		<true/>
+		<key>Mobile</key>
+		<true/>
 	</dict>
 	<key>SystemParameters</key>
 	<dict>
